# Various

./: README.md
High School Teaching & Projects/Prezentácie - Programovanie INF-3R/: README.md
High School Teaching & Projects/Prezentácie - Web Technologies INF-4R/: README.md
High School Teaching & Projects/Projekt - RPi - TV Server Suplovanie/: README.md  changelog.txt  pagelib.py  parselib.py  server.py
High School Teaching & Projects/Projekty - Programovanie sINF-4R/: README.md
University - Individual Projects/Bachelor - Computational Intelligence Assignments/: Ciele zadaní.txt  README.md
University - Individual Projects/Bachelor - Feed-Forward ANN/: README.md
University - Individual Projects/Bachelor - Fuzzy Controller/: README.md
University - Individual Projects/Bachelor - Kohonen ANN/: README.md
University - Individual Projects/Bachelor - MATLAB Simulations systems/: README.md
University - Individual Projects/Master - StereoTLD/source/: CMakeLists.txt  qiproject.xml
University - Individual Projects/Master - StereoTLD/source/src/: CMakeLists.txt  main.cpp
University - Individual Projects/Master - StereoTLD/source/src/libopentld/tld/: MedianFlowTracker.cpp  TLD.cpp
University - Individual Projects/Master - StereoTLD/source/src/stereovision/: auxiliary.cpp  auxiliary.h  evolution.cpp  evolution.h  imacquisition.cpp  imacquisition.h  motion.cpp  motion.h  neuralnet.cpp  neuralnet.h  robot.cpp  robot.h  stereotld.cpp  stereotld.h  timer.cpp  timer.h
University - Scientific Publications/: NOLICENCE.md  README.md
University - Theses/: README.md
(+463 files in other folders)
